crates/strider-analyze/tests/snapshots/v3__aarch64be__globals__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x210180:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x210188:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v10" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x210194:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "13" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "13" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2101b4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v23" [color="#888888", style=dashed];
  "v23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "19" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v28" [color="#888888", style=dashed];
  "v28" -> "25" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "27" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v34" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v34" [color="#888888", style=dashed];
  "v34" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "35" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "19" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "39" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "35" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v43" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "13" -> "v43" [color="#888888", style=dashed];
  "v43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "44" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "13" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "44" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "48" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "44" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v49" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v49" -> "48" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "48" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "50" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "51" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "54" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v59" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v59" [color="#888888", style=dashed];
  "v59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "54" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "7" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v10" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "62" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "63" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "62" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "65" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "66" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "69" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "69" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "72" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "72" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "75" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "75" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
